<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- Marker colors -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/help_marker_colors"
            android:textColor="@color/ICSblue"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/androidmarker_blue"
            android:drawablePadding="10dp"
            android:text="@string/help_blue_marker"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/androidmarker_green"
            android:drawablePadding="10dp"
            android:text="@string/help_green_marker"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/androidmarker_red"
            android:drawablePadding="10dp"
            android:text="@string/help_red_marker"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/androidmarker_yellow"
            android:drawablePadding="10dp"
            android:text="@string/help_yellow_marker"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/androidmarker_black"
            android:drawablePadding="10dp"
            android:text="@string/help_black_marker"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/bus_stop"
            android:drawablePadding="10dp"
            android:text="@string/help_bus_stop"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <!-- Last updated -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/help_last_updated"
            android:textColor="@color/ICSblue"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/last_updated_markers"
            android:text="@string/help_last_updated_markers"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/last_updated_marker"
            android:text="@string/help_last_updated_marker"
            android:textColor="@color/black"
            android:textIsSelectable="true" />

        <!-- Other info -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/help_other_info"
            android:textColor="@color/ICSblue"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/help_markers_update_info"
            android:textColor="@color/black"
            android:textIsSelectable="true" />
        
        <!-- Notice -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/help_notice"
            android:textColor="@color/ICSblue"
            android:textIsSelectable="true"
            android:textSize="18sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/help_notice_text"
            android:linksClickable="true"
            android:autoLink="all"
            android:textColor="@color/black"
            android:textIsSelectable="true" />
    </LinearLayout>

</ScrollView>