<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Sudheer -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudheer"
            android:textColor="@color/ICSblue"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/sudheer"
            android:src="@drawable/sudheer" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/sudheerWork"
            android:textColor="@color/black" />

        <!-- Sampath -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampath"
            android:textColor="@color/ICSblue"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/sampath"
            android:src="@drawable/sampath" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/sampathWork"
            android:textColor="@color/black" />

        <!-- Jithu -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/jithu"
            android:textColor="@color/ICSblue"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/jithu"
            android:src="@drawable/jithu" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/jithuWork"
            android:textColor="@color/black" />

        <!-- praveen -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/praveen"
            android:textColor="@color/ICSblue"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/praveen"
            android:src="@drawable/praveen" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/praveenWork"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>